--- a/User/User.csproj
+++ b/User/User.csproj
@@ -18,11 +18,14 @@
       <PackageReference Include="AutoMapper" Version="10.0.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
       <PackageReference Include="FluentValidation" Version="9.3.0-preview2" />
-      <PackageReference Include="Microsoft.EntityFrameWorkCore.Design" Version="3.1.9">
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameWorkCore.SqlServer" Version="3.1.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
       <PackageReference Include="Scrutor" Version="3.2.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.0" />
     </ItemGroup>
